<resources>

    <!--    In activity_login.xml -->
    <string name="height_prompt">Please enter your height:</string>
    <string name="num_hint">0</string>
    <string name="feet_units">ft</string>
    <string name="inch_units">in</string>
    <string name="without_login">Continue without login</string>
    <string name="with_login">Go back to login</string>
    <string name="enter_gmail_address">Enter gmail address</string>
    <string name="enter_password">Enter unique password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Enter name</string>
    <string name="sign_up_tv">Don\'t have an account? Sign up here</string>
    <string name="login_tv">Already have an account? Log in here</string>

    <!--    In activity_home.xml-->
    <string name="daily_steps">Daily Steps</string>
    <string name="daily_distance">Daily Distance</string>
    <string name="daily_step_background">Background for Daily Steps</string>
    <string name="daily_distance_background">Background for Daily Distance</string>
    <string name="stop_walk">Stop Walk</string>
    <string name="most_recent_walk"> Most Recent Walk</string>
    <string name="mock_btn_text">Mock Values</string>
    <string name="no_walk_today">You haven\'t completed a walk today!</string>
    <string name="save_prompt">Save this route?</string>

    <!--    In activity_mock.xml-->
    <string name="total_steps">0</string>
    <string name="added_steps">Added Steps:</string>
    <string name="click_to_add">Click to add 500 to your step count</string>
    <string name="increment_btn_text">+500</string>
    <string name="time_hint">hh:mm:ss</string>
    <string name="max_input_chars">8</string>
    <string name="enter_start_time">Enter Desired Start Time: </string>

    <!--    In content_save_route.xml-->
    <string name="title">Title: (this is REQUIRED) </string>
    <string name="name_route_hint">Name Route</string>
    <string name="starting_location">Starting Location:</string>
    <string name="location_det_hint">Location Details</string>
    <string name="loop">Loop</string>
    <string name="out_and_back">Out-and-back</string>
    <string name="flat_button">Flat</string>
    <string name="hilly_button">Hilly</string>
    <string name="even">Even</string>
    <string name="uneven">Uneven</string>
    <string name="street">Street</string>
    <string name="trail">Trail</string>
    <string name="hard">Hard</string>
    <string name="moderate">Moderate</string>
    <string name="easy">Easy</string>
    <string name="notes">Notes</string>
    <string name="notesHint">Extra information about the route</string>
    <string name="save">SAVE</string>

    <!--    In activity_routes.xml-->
    <string name="btn_see_teammates_routes">See Teammate Routes</string>
    <string name="menu_item_create_walk">Create Route</string>

    <!--    In item_route.xml-->
    <string name="fake_title">Canyon View Hiking Trail</string>
    <string name="fake_steps">22 steps</string>
    <string name="fake_distance">0.01 miles</string>
    <string name="fake_date">1/20</string>

    <!-- In activity_teaminvite_member.xml-->
    <string name="title_add_team_member">Add Team Member</string>
    <string name="hint_enter_team_name">Enter Team Member Name</string>
    <string name="title_team_member_name">Team Member Name</string>
    <string name="hint_enter_team_email">Enter Team Member Email</string>
    <string name="title_team_member_email">Team Member Email</string>
    <string name="btn_send_invite">Send Invitation</string>

    <!-- In activity_team.xml-->
    <string name="title_team_page">Your Walking Team</string>
    <string name="pending_invites">Pending&#10;Invitations</string>
    <string name="invite_team_member">Invite&#10;New Teammate</string>
    <string name="title_teammates_in_team">Teammates: </string>
    <string name="btn_title_scheduled_walks">Scheduled and Proposed Walks</string>
    <string name="text_no_teammates_in_team">No Teammates Yet :-(</string>
    <string name="status_description">Teammate Walk Decision Icon</string>

    <!-- In activity_invitations -->
    <string name="title_pending_invitations_page">Pending Invitations</string>
    <string name="btn_accept_team_invitation">Accept</string>
    <string name="btn_decline_team_invitation">Decline</string>
    <string name="text_invitation_not_exist">You don\'t have any pending invitations.</string>


    <!--    In both activity_loginxml and activity_mock.xml-->
    <string name="finish_btn_text">Finish</string>

    <!--    In both activity_home.xml and activity_route_details.xml-->
    <string name="total_steps_prompt">Total Steps: </string>
    <string name="total_distance">Total Distance: </string>
    <string name="time_elapsed">Time Elapsed: </string>
    <string name="start_walk">Start Walk</string>

    <!--    In both activity_route_details.xml and content_save_route.xml-->
    <string name="route_type">Route Type:</string>
    <string name="terrain_type">Terrain Type:</string>
    <string name="surface_type">Surface Type:</string>
    <string name="land_type">Land Type:</string>
    <string name="difficulty">Difficulty:</string>

    <!--    In MockActivity.java-->
    <string name="enter_end_time">Enter Desired End Time: </string>

    <!--    In AndroidManifest.xml-->
    <string name="app_name">WalkWalkRevolution</string>
    <string name="title_activity_saving_page">Save your walk</string>
    <string name="title_activity_routes">My Routes</string>
    <string name="title_activity_invite_team_to_walk">Invite Team to Walk</string>

    <!--    Others-->
    <string name="routes">Routes</string>
    <string name="home">Home</string>
    <string name="team">Team</string>

    <!-- In ListviewAdapter.java -->
    <string name="fake_teammate_name">Samuel Jackson</string>
    <string name="fake_teammate_initials">SJ</string>

    <!-- In TeamRoutesActivity -->
    <string name="title_team_routes_activity">Team Routes</string>

</resources>
