...
    android:paddingBottom="10dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    >

    <TextView
        android:id="@+id/tv_route_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fake_title"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/tv_routes_date_completed"/>

...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fake_date"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btn_routes_favorite"
        android:layout_width="47dp"
        android:layout_height="35dp"
        android:layout_below="@+id/tv_routes_date_completed"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_star_border_black_24dp" />

...
